demo/istio/layotto.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
    service: client
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: layotto-client:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
    service: server
spec:
  ports:
  - port: 9090
    name: http
  selector:
    app: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-v1
  labels:
    app: server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      version: v1
  template:
    metadata:
      labels:
        app: server
        version: v1
    spec:
      containers:
      - name: server
        image: layotto-server:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-v2
  labels:
    app: server
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      version: v2
  template:
    metadata:
      labels:
        app: server
        version: v2
    spec:
      containers:
      - name: server
        image: layotto-server:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
