demo/istio/layotto-header-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
  - server
  http:
  - match:
    - headers:
        name:
          exact: layotto
    route:
    - destination:
        host: server
        subset: v1
  - route:
    - destination:
        host: server
        subset: v2
