demo/istio/layotto-virtual-service-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
  - server
  http:
  - route:
    - destination:
        host: server
        subset: v1
